# cppcheckdata-shims

./: .gitignore  LICENSE  Makefile  README.md  VERSION.md  generate-docs.sh  pyproject.toml  requirements.txt  setup.py
casl/: __init__.py  __main__.py  ast.py  ast_nodes.py  builtins.py  casl.ebnf  codegen.py  csql_compiler.py  errors.py  main.py  parser.py  property_compiler.py  pyproject.toml  runtime.py  semantic.py  shims_bridge.py  visitor.py
cppcheckdata-shims/cppcheckdata_shims/: abstract_domains.py  checkers.py  ctrlflow_graph.py  dataflow_analyses.py  dataflow_engine.py  qscore.py
cppcheckdata_shims/: __init__.py  abstract_domains.py  abstract_exec.py  abstract_interp.py  abstract_vm.py  ast_helper.py  callgraph.py  checkers.py  constraint_engine.py  ctrlflow_analyses.py  ctrlflow_analysis.py  ctrlflow_graph.py  dataflow_analysis.py  dataflow_engine.py  dependency_graph.py  distrib_analysis.py  interproc_analysis.py  memory_abstraction.py  path_analysis.py  plus_reporter.py  qscore.py  symbolic_exec.py  taint_analysis.py  transition_system.py  type_analysis.py
docs/: CASL_MANUAL.md  Doxyfile  SHIMS_VADE_MECUM.md  VADE_MECUM.md  VADE_MECUM_PERSIAN.md  build_docs.py  conf.py  extract_docs.py  generate_docs.sh  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: casl.rst  cppcheckdata_shims.rst
docs/internals/: architecture.rst  index.rst  pipeline.rst
docs/vade-mecum/: vade-mecum.cls
dsl/: casl.py  ccpl.py  ccql.py
erroneous-code/: atomic-correctness-example.c  bad-auth-cred.c  bad-auth-privileges.c  bad-crypto-cipher.c  bad-crypto-hashing.c  buffer-overflow-stack-heap.c  buffer-overflow-strings.c  buffer-overflow-via-tainted-size.c  buffer-overflow-via-tainted-size.c.dump.dump  buffer-overflow.c  buffer-overflow.c.dump.dump  cast-downcast.c  cast-int-to-float.c  cast-volatile-away.c  command-injection.c  compiler-barrier-example.c  compiler-over-opt.c  computationally-expensive-program.c  computationally-expensive-program.c.ctu-info  concurrency-invariant-example.c  cost-analysis-sample.c  cost-analysis-sample.c.ctu-info  crypto-lifecycle-example.c  crypto-protocol-checker.c  dangling-return.c  dead-store.c  deadlock-dclp.c  debug-leftover-leaks.c  debug-leftover-memory.c  deprecated-func-use-1.c  deprecated-func-use-2.c  double-free.c  enum-arithmetic.c  errno-usage-test.c  exhaustion-fd-recursion.c  exhaustion-test-alloc.c  external-control-system.c  file-handle-leak.c  format-and-off-by-one.c  format-string-example.c  (+41 more)
examples/: very-busy-expressions.py
examples/api-based/: BadFunCall.py  Buflint.py  FormatStringValidator.py  NullptrMisuseDetector.py  RedundantComputation.py
examples/buflint/: buflint.casl  buflint.py
examples/casl-based/: BadFunCall.casl  Buflint.casl  FormatStringValidator.casl  NullptrMiuseDetector.casl  RedundantCompuation.casl
examples/format-string-validator/: FormatStringValidator.casl  FormatStringValidator.py
examples/integer-lint/: IntegerLint.casl
examples/shims/: buffer-overflow.py  use-after-free.py
liblint/api-contract-lint/: APIContractLint.py
liblint/atomic-correctness-lint/: AtomicCorrectnessLint.py
liblint/buffer-exploit-detect/: BufferExploitDetect.py
liblint/buffer-overflow-scan/: BufferOverflowScan.py
liblint/buflint/: Buflint.py
liblint/cast-validator/: CastValidator.py
liblint/compiler-barrier-checker/: CompilerBarrierChecker.py
liblint/concurrency-invariant-checker/: ConcurrencyInvariantChecker.py
liblint/concurrency-validator/: ConcurrencyValidator.py
liblint/crypto-key-lifecycle/: CryptoKeyLifecycle.py
liblint/crypto-protocol-checkr/: CryptoProtocolChecker.py
liblint/crypto-safety-assurance/: CryptoSafetyAssurance.py
liblint/dead-store-detector/: DeadStoreDetector.py
liblint/debug-leftover-finder/: DebugLeftoverFinder.py
liblint/deprecated-func-audit/: DeprecatedFuncAudit.py
liblint/enum-check/: EnumCheck.py
liblint/errno-usage-checker/: ErrnoUsageChecker.py
liblint/format-string-guard/: FormatStringGuard.py
liblint/input-validation-lint/: InputValidationLint.py
liblint/integer-lint/: IntegerLint.py
liblint/integer-narrowing-guard/: IntegerNarrowingGuard.py
liblint/lifetime-annotated-verifier/: LifetimeAnnotatedVerifier.py
liblint/memory-provenance-checker/: MemoryProvenanceChecker.py
liblint/misra-subset-lint/: MISRASubsetLint.py
liblint/nullability-flow-checker/: NullabilityFlowChecker.py
liblint/numeric-conversion-auditor/: NumericConversionAuditor.py
liblint/ownership-flow-tracker/: OwnershipFlowTracker.py
liblint/path-lint/: PathLint.py
liblint/pointer-lifetime-tracker/: PointerLifetimeTracker.py
liblint/power-consumption-estimator/: PowerConsumptionEstimator.py
liblint/priviledge-boundary-checker/: PriviledgeBoundaryChecker.py
liblint/resource-exhaustion-guard/: ResourceExhaustionGuard.py
liblint/resource-leak-lint/: ResourceLeakLint.py
liblint/safe-auth-assurance/: SafeAuthAssurance.py
liblint/security-lint/: SecurityLint.py
liblint/serialization-safety-lint/: SerializationSafetyLint.py
liblint/shared-resource-validator/: SharedResourceValidator.py
liblint/signal-safety-lint/: SignalSafetyLint.py
liblint/stack-buffer-harden-lint/: StackBufferHarden.py
liblint/stack-depth-analyzer/: StackDepthAnalyzer.py
liblint/static-cost-analysis/: StaticCostAnalysis.py
liblint/taint-lint/: TaintLint.py
liblint/type-confusion-detector/: TypeConfusionDetector.py
liblint/undef-behavior-check/: UndefBehaviorCheck.py
liblint/unreachable-code-analyzer/: UnreachableCodeAnalyzer.py
liblint/varargs-safety-checker/: VarargsSafetyChecker.py
liblint/variable-lint/: VariableLint.py
patterns/: unsafe-functions.patt
scripts/: power-consumption-perf.sh
src/cppcheckdata-shims/: __init__.py  analysis.py
tests/: test_casl.py  test_casl_grammar.py  test_casl_parser.py  test_codegen.py  test_end_to_end.py  test_runtime.py  test_shims_bridge.py  test_shims_checkers.py  test_shims_dataflow.py  test_shims_type.py
