# ============================================================================
#  cppcheckdata-shims — pyproject.toml
#
#  Static-analysis shims, abstract domains, data-flow / control-flow engines,
#  and the CASL DSL compiler, all built on top of Cppcheck's dump format.
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

# ── Core metadata ───────────────────────────────────────────────────────────
[project]
name = "cppcheckdata-shims"
version = "0.1.0"
description = "Static-analysis shims, abstract interpretation engines, and the CASL DSL for Cppcheck dump files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "cppcheckdata-shims contributors"},
]
maintainers = [
    {name = "cppcheckdata-shims contributors"},
]
keywords = [
    "cppcheck",
    "static-analysis",
    "abstract-interpretation",
    "data-flow",
    "control-flow",
    "CASL",
    "program-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed",
]

# ── Runtime dependencies ────────────────────────────────────────────────────
dependencies = []
# The library is intentionally zero-dependency at runtime.
# cppcheckdata.py itself is vendored by Cppcheck and is expected to live
# on sys.path (or be supplied by the host project).

# ── Optional / extra dependency groups ──────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
]
viz = [
    "graphviz>=0.20",
]

# ── Entry points ────────────────────────────────────────────────────────────
[project.scripts]
# The `casl` CLI compiler / runner
casl = "casl.__main__:main"

# ── Project URLs ────────────────────────────────────────────────────────────
[project.urls]
Homepage    = "https://github.com/user/cppcheckdata-shims"
Repository  = "https://github.com/user/cppcheckdata-shims"
Issues      = "https://github.com/user/cppcheckdata-shims/issues"
Documentation = "https://github.com/user/cppcheckdata-shims/tree/main/docs"

# ── Setuptools-specific configuration ──────────────────────────────────────
[tool.setuptools]
# Automatically discover all packages (cppcheckdata_shims, casl, tests)
# but exclude tests, scripts, docs, and build artefacts from the wheel.

[tool.setuptools.packages.find]
include = [
    "cppcheckdata_shims",
    "cppcheckdata_shims.*",
    "casl",
    "casl.*",
]
exclude = [
    "tests",
    "tests.*",
    "scripts",
    "scripts.*",
    "docs",
    "docs.*",
]

[tool.setuptools.package-data]
# Include py.typed markers if/when we add them
cppcheckdata_shims = ["py.typed"]
casl               = ["py.typed"]

# Ship the bin/casl wrapper script inside sdists
[tool.setuptools.data-files]
"bin" = ["bin/casl"]

# ── Tool configuration ─────────────────────────────────────────────────────

# -- pytest --
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short --strict-markers"
markers     = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e:  end-to-end integration tests",
]

# -- coverage --
[tool.coverage.run]
source = ["cppcheckdata_shims", "casl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty   = true
fail_under   = 60

# -- ruff (linter + formatter) --
[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B905",   # zip-strict — not always wanted
]

[tool.ruff.lint.isort]
known-first-party = ["cppcheckdata_shims", "casl"]

# -- mypy --
[tool.mypy]
python_version       = "3.10"
warn_return_any      = true
warn_unused_configs  = true
disallow_untyped_defs = false        # relax for now; tighten later
ignore_missing_imports = true        # cppcheckdata is untyped

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -- black (if used instead of ruff format) --
[tool.black]
target-version = ["py310"]
line-length    = 100

# -- isort (if used standalone) --
[tool.isort]
profile          = "black"
line_length      = 100
known_first_party = ["cppcheckdata_shims", "casl"]
