# ============================================================================
#  cppcheckdata-shims — pyproject.toml
#
#  Static-analysis shims, abstract domains, data-flow / control-flow engines,
#  and the CASL DSL compiler, all built on top of Cppcheck's dump format.
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

# ── Core metadata ───────────────────────────────────────────────────────────
[project]
name = "cppcheckdata-shims"
version = "0.1.0"
description = "Static-analysis shims, abstract interpretation engines, and the CASL DSL for Cppcheck dump files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "cppcheckdata-shims contributors"},
]
maintainers = [
    {name = "cppcheckdata-shims contributors"},
]
keywords = [
    "cppcheck",
    "static-analysis",
    "abstract-interpretation",
    "data-flow",
    "control-flow",
    "CASL",
    "program-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed",
]

# ── Runtime dependencies ────────────────────────────────────────────────────
dependencies = []

# ── Optional / extra dependency groups ──────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
]
viz = [
    "graphviz>=0.20",
]

# ── Entry points ────────────────────────────────────────────────────────────
#
#  This is the ONLY mechanism needed to expose the `casl` CLI command.
#  setuptools will auto-generate a platform-appropriate wrapper script
#  (e.g. /usr/local/bin/casl on Linux, Scripts\casl.exe on Windows)
#  that calls casl.__main__:main.
#
#  NO scripts= and NO [tool.setuptools.data-files] for bin/casl needed.
#
[project.scripts]
casl = "casl.__main__:main"

# ── Project URLs ────────────────────────────────────────────────────────────
[project.urls]
Homepage      = "https://github.com/user/cppcheckdata-shims"
Repository    = "https://github.com/user/cppcheckdata-shims"
Issues        = "https://github.com/user/cppcheckdata-shims/issues"
Documentation = "https://github.com/user/cppcheckdata-shims/tree/main/docs"

# ── Setuptools-specific configuration ──────────────────────────────────────
[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    "cppcheckdata_shims",
    "cppcheckdata_shims.*",
    "casl",
    "casl.*",
]
exclude = [
    "tests",
    "tests.*",
    "scripts",
    "scripts.*",
    "docs",
    "docs.*",
]

[tool.setuptools.package-data]
cppcheckdata_shims = ["py.typed"]
casl               = ["py.typed"]

# ════════════════════════════════════════════════════════════════════════════
#  REMOVED — this was the root cause of the build error:
#
#  [tool.setuptools.data-files]
#  "bin" = ["bin/casl"]          # ← tried to copy a physical file that
#                                #   may not exist; completely unnecessary
#                                #   because [project.scripts] already
#                                #   creates the CLI wrapper.
# ════════════════════════════════════════════════════════════════════════════

# ── Tool configuration ─────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short --strict-markers"
markers   = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e:  end-to-end integration tests",
]

[tool.coverage.run]
source = ["cppcheckdata_shims", "casl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty   = true
fail_under   = 60

[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",
    "B905",
]

[tool.ruff.lint.isort]
known-first-party = ["cppcheckdata_shims", "casl"]

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.black]
target-version = ["py310"]
line-length    = 100

[tool.isort]
profile           = "black"
line_length       = 100
known_first_party = ["cppcheckdata_shims", "casl"]
