# pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "casl"
version = "0.1.0"
description = "CASL — Cppcheck Addon Specification Language"
requires-python = ">=3.10"
dependencies = [
    "parsimonious>=0.10.0",
]

[project.optional-dependencies]
shims = [
    "cppcheckdata-shims",
]

[project.scripts]
casl = "casl.__main__:main"

[tool.setuptools.packages.find]
include = ["casl*"]
